--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "25.0.9",
+    "typescript": "5.9.3"
   }
 }
