--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,29 @@
   "name": "expense-tracker-server",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon --exec 'ts-node --transpile-only index.ts'",
+    "start": "ts-node --transpile-only index.ts",
+    "build": "tsc",
+    "prod": "node dist/index.js"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^3.0.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.9",
+    "@types/pg": "^8.16.0",
+    "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.3",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
