--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^3.0.6",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
