--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.9",
     "typescript": "5.9.3"
   }
