--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "node-cron": "^4.2.1",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.9",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
