Added custom components and separate it into dedicated CSS files

--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.9",
+    "@types/pg": "^8.16.0",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
