--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.35",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
