--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.9",
     "@types/pg": "^8.16.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
