Added env to railway deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,19 @@
+# Server Configuration
 PORT=4000
+
+# Database (PostgreSQL)
+# For local development, use your local PostgreSQL connection string
+# For production (Railway/Render), use your cloud database URL
+# Example: postgresql://user:password@host:port/database
+DATABASE_URL="postgresql://postgres:password@localhost:5432/expense_tracker"
+
+# Authentication Secret
+# This should match your NEXTAUTH_SECRET from the client
+# Generate with: openssl rand -base64 32
+NEXTAUTH_SECRET="your-secret-key-here"
+
+# Optional: Separate JWT secret (uses NEXTAUTH_SECRET if not set)
+# JWT_SECRET="your-jwt-secret-here"
+
+# Node Environment
+# NODE_ENV="production"
