--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,18 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^3.0.6",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
-    "sqlite3": "^5.1.6"
+    "pg": "^8.17.1",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -26,10 +33,7 @@
     "@types/node": "^25.0.9",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
-    "dotenv": "^17.2.3",
-    "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "prisma": "^7.2.0"
   }
 }
