--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "main": "index.ts",
+  "engines": {
+    "node": ">=20.19.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "nodemon --exec 'ts-node --transpile-only index.ts'",
     "start": "ts-node --transpile-only index.ts",
